# craft-ai-client-python

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  .travis.yaml  .travis.yml  CHANGELOG.md  DEVELOPERS.md  MANIFEST.in  Makefile  README.md  README.rst  cli.py  requirements.txt  setup.cfg  setup.py  tox.ini
craftai/: __init__.py  _version.py  client.py  constants.py  errors.py  formatters.py  interpreter.py  interpreter_v1.py  interpreter_v2.py  jwt_decode.py  operators.py  reducer.py  time.py  timezones.py  version.py
craftai/pandas/: __init__.py  client.py  interpreter.py  utils.py
scripts/: update_readme.sh  update_version.sh
tests/: __init__.py  settings.py  test_add_operations.py  test_add_operations_bulk.py  test_create_agent.py  test_create_agents.py  test_create_bulk_agents.py  test_decide.py  test_delete_agent.py  test_delete_agents.py  test_delete_bulk_agents.py  test_distribution.py  test_formatters.py  test_getSharedAgentInspectorUrl.py  test_get_agent.py  test_get_bulk_decision_trees.py  test_get_context_state.py  test_get_decision_tree.py  test_get_decision_trees.py  test_get_operations_list.py  test_get_shared_agent_inspector_url.py  test_get_state_history.py  test_jwt_decode.py  test_list_agents.py  test_pandas.py  test_reducer.py  test_sharedAgentInspectorUrl.py  test_time.py
tests/data/: invalid_data.py  large_operation_list.json  small_operation_list.json  valid_data.py
tests/data/interpreter/expectations/: blind.json  blind2.json  emptyArray.json  generateTime.json  object.json  oneColor.json  timezone.json  version0-0-2.json  (+1 more)
(+8 files in other folders)
