[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python 3. 
universal = 1

[metadata]
description-file = README.md

[versioneer]
vcs = git
style = git-describe
versionfile_source = craftai/_version.py
versionfile_build = craftai/_version.py
tag_prefix = 'v'
parentdir_prefix = craftai-
verbose = True